[package]
name = "notion-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Notion API SDK for Rust"
authors = ["Noah Wan <rustpanic@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.51"
